# edgecraft

./: .gitignore  404.html  PoC.ipynb  PoC_copy.ipynb  PoC_simple.ipynb  README.md  edgeLength.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: gh-pages-deploy.yml
docs/: Theoretical_description_of_the_simulator.md  index.md  principle.md
edgecraft/: __init__.py  basic.py  const.py
examples/multiple_etched_sample/: edge_lengths.npy  gate_potential.npy  multiple_etched_sample.py  multiple_etched_sample_anim.py  plot.ipynb
examples/simple_sample/: edge_lengths.npy  plot.ipynb  simple_sample.py  simple_sample_anim.py  time.npy
