[tool.poetry]
name = "edgecraft"
version = "0.1.0"
description = "Quantum Hall edge deformation simulator for analog universe experiments."
authors = ["Yunhyeon Jeong <jjj999to@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.1"
numpy = "^2.2.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
