[tool.poetry]
name = "edgecraft"
version = "0.1.0"
description = "Quantum Hall edge deformation simulator for analog universe experiments."
authors = ["Yunhyeon Jeong <jjj999to@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.1"
numpy = "^2.2.5"
click = "^8.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.4.1"
mkdocs-material = "^9.6.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
